# FoodHub

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
docker/backend/: Dockerfile  celery.sh
docker/nginx/conf/: nginx.conf
docker/scripts/: wsgi-entrypoint.sh
src/: pyproject.toml  requirements.txt
src/apps/products/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/apps/products/migrations/: 0001_initial.py  0002_alter_product_photo_alter_product_popularity.py  0003_alter_product_type.py
src/apps/users/: admin.py  email.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_customuser_email_customuser_first_name_and_more.py  0003_alter_customuser_managers.py  0004_alter_customuser_managers_customuser_is_active_and_more.py  0005_alter_customuser_options.py
src/apps/users/templates/email/: activation.html
src/core/: celery.py  settings.py  tasks.py  urls.py
